--- a/LightMatterInteraction.html
+++ b/LightMatterInteraction.html
@@ -70,7 +70,7 @@
   
       <!-- Footer with Club Details -->
       <div style="text-align: center; margin-top: 20px; padding: 15px; background: rgba(255, 255, 255, 0.1); border-radius: 0 0 15px 15px; animation: fadeIn 3s;">
-        <img src="https://github.com/ValenceClub/Valenceclub.github.io/blob/main/image.png?raw=true" alt="Valence Logo" style="width: 320px; height: 72px; margin-bottom: 10px;">
+        <img src="https://github.com/ValenceClub/Email-Assets/blob/main/logos/valence_email_logo.png?raw=true" alt="Valence Logo" style="width: 320px; height: 72px; margin-bottom: 10px;">
         <p style="color: #aaaaaa; font-size: 14px; margin: 5px 0;">
           From your friends at <strong>Valence - A Chemistry Public Journal Club</strong>
         </p>
