added the valence logo

--- a/student_talk_series/main_email/call_expert_interns.html
+++ b/student_talk_series/main_email/call_expert_interns.html
@@ -1,42 +1,54 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Valence Club: Summer Internship Talk Special</title>
+</head>
+<body>
+
 <div class="container">
   <div class="banner">
-    <h1>✨ Drugging the Undruggable ✨</h1>
+    <h1>🔬 Summer Internship Talk Special 🔬</h1>
     <h2>Organized by: <span>Valence Club</span>, IISER Kolkata</h2>
   </div>
   <div class="content">
-    <h2>"The Tale of Nucleophilic Sulfur: Drugging the Undruggable in Chromatin Dynamics"</h2>
-    <p>🌈 Have you ever wondered how small molecules can tackle the seemingly impossible targets in biology? How do scientists design drugs to influence the very foundations of gene regulation? By the end of this talk, we'll journey into the world of small-molecule chemistry and discover how it is transforming our approach to fighting diseases like cancer.</p>
-    <p>This study explores how nucleophilic sulfur can be used to modulate hard-to-target proteins that play crucial roles in various biological pathways. These innovative small molecules have the potential to both activate and inhibit specific pathways, opening up new possibilities for developing therapies against challenging diseases. The work combines creative chemistry with the challenge of designing molecules that can influence the fundamental mechanisms controlling gene expression.</p>
-    <div class="keywords">
-      <strong>Keywords: </strong> Transcription Factor, Chromatin Dynamics, Drug Discovery, Hormone-Responsive Cancers, Binding Affinity, Small Molecule, ABPP, Genomics, Chemoproteomics, Cancer Therapeutics
-    </div>
+    <h2>"Share Your Summer Science Story!"</h2>
+    <p>Greetings, chemists!</p>
+    <p>Did you spend your summer diving deep into fascinating research? Did you tackle challenging problems, learn new techniques, or have a breakthrough moment in the lab? The Valence Club is excited to announce a special series of flash talks for everyone who completed a summer internship in chemistry!</p>
+    <p>This is your platform to showcase your hard work, share your valuable experiences, and enlighten your peers on the exciting world of chemistry research. We invite you to give a brief presentation on your project, your journey, and any tips you have on securing a great internship.</p>
     
-  
-    <div class="speaker">
-      <h2>About the Speaker</h2>
-      <img src="https://github.com/ValenceClub/Email-Assets/blob/main/Student_Talks/Drug_the_Undrugged/Drugged_the_Undrugged_poster.jpeg?raw=true" alt="Speaker Poster">
-      <p>🎙️ <strong>Swapnanil Sur</strong>, 22MS001, is a 3rd-year student from the Department of Chemical Sciences at IISER Kolkata. Under the guidance of <strong>Dr. Arindam Mukherjee</strong>, Swapnanil is exploring the fascinating field of metal-based cancer drugs. His passion for understanding the intricate dance between chemistry and biology shines through in this exciting talk on how small molecules are revolutionizing drug discovery.</p>
-    </div>
-  
     <div class="why-attend">
-      <h2>Why Attend This Talk?</h2>
+      <h2>Why Should You Present?</h2>
       <ul>
-        <li>💡 "Unlock the secrets of how small molecules can reshape gene expression and drive breakthrough cancer therapies!"</li>
-        <li>🔬 Gain insights into cutting-edge techniques in drug design</li>
-        <li>🎯 Discover the innovative role of nucleophilic sulfur</li>
-        <li>🧪 Learn about the intersection of chemistry and biology</li>
-        <li>🌍 Explore future therapeutic strategies</li>
+        <li>💡 Share your passion and research with an engaged audience.</li>
+        <li>🤝 Inspire fellow students with your internship journey.</li>
+        <li>🎤 Hone your presentation and science communication skills.</li>
+        <li>📚 Contribute to our collective knowledge and vibrant chemistry community.</li>
+        <li>🏆 Receive recognition for your hard work and dedication.</li>
       </ul>
     </div>
-  
+
     <div class="quote">
-      <p>"Why did sulfur break up with oxygen? It couldn't handle all the double-bond drama!" 😉</p>
+        <p>"The best way to learn is to teach. The best way to solidify your knowledge is to share it!" 😉</p>
+    </div>
+
+    <div class="event-details">
+      <h2>Interested in Presenting? Let Us Know!</h2>
+      <p style="color: #fff; text-shadow: none;">If you would like to be a speaker, please fill out the form below. This will help us gauge interest and organize the sessions.</p>
+      <div class="cta-button">
+          <a href="https://docs.google.com/forms/d/e/1FAIpQLScTXQADvnclWtnXnpJElvyq_H78hOK5Y6o6TyRGPMvWG1w9-Q/viewform?usp=dialog" target="_blank">Sign Up Here!</a>
+      </div>
+      <h3><strong>Deadline for Response:</strong> 1st August, 11:59 PM</h3>
     </div>
   
-    <div class="event-details">
-      <h2>🗓 <strong>6th November (Wednesday), 7 PM</strong></h2>
-      <h3>Location: <strong>G06</strong>, LHC, IISER Kolkata</h3>
+    <div class="speaker">
+      <h2>Event Details</h2>
+      <p>🗓️ <strong>Date & Time:</strong> To be announced soon!</p>
+      <p>📍 <strong>Venue:</strong> To be announced soon!</p>
+      <p>Stay tuned for more details. We can't wait to hear about your amazing summer experiences!</p>
     </div>
+
   </div>
   
   <div class="footer">
@@ -45,10 +57,14 @@
     <p>© 2024 Valence Club, IISER Kolkata. All rights reserved.</p>
   </div>
 </div>
-</body>
-
 
 <style>
+body {
+    background-color: #0c051a;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+    margin: 0;
+    padding: 15px;
+}
 .container {
   max-width: 800px;
   margin: 0 auto;
@@ -105,34 +121,6 @@
   animation: fadeIn 2s;
 }
 
-.keywords {
-  padding: 10px;
-  color: #ffffff;
-  font-size: 0.85rem;
-  text-align: center;
-  border-radius: 8px;
-  background: linear-gradient(145deg, #5e3a99, #3a2364); /* 3D effect */
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.4), -5px -5px 10px rgba(255, 255, 255, 0.1);
-  border: 1px solid rgba(229, 255, 0, 0.8);
-  max-width: 100%;
-  overflow-wrap: break-word;
-}
-
-
-@media (max-width: 767px) {
-  .keywords div {
-    font-size: 0.7rem; /* Reduces font size for smaller screens */
-    padding: 6px 8px;
-    max-width: 100px; /* Further limits width to fit smaller screens */
-  }
-}
-
-
-
-
-
-
-
 .speaker {
   background-color: rgba(40, 20, 80, 0.95);
   padding: 25px;
@@ -149,21 +137,12 @@
   text-shadow: 0 0 15px rgba(0, 255, 47, 0.7);
 }
 
-.speaker img {
-  width: 100%;
-  max-width: 700px;
-  height: auto;
-  margin: 0 auto 15px;
-  border-radius: 15px;
-  box-shadow: 0 8px 32px rgba(0,0,0,0.4);
-}
-
 .speaker p {
   line-height: 1.7;
-  font-size: 0.9rem;
+  font-size: 1rem;
   color: #fff;
   text-shadow: 0 1px 2px rgba(0,0,0,0.2);
-  text-align: left;
+  text-align: center;
   margin: 15px 0;
 }
 
@@ -226,8 +205,32 @@
 .event-details h3 {
   font-size: 1.2rem;
   color: #d4af37;
-  margin: 12px 0;
+  margin: 12px 0 0 0;
   text-shadow: 0 2px 4px rgba(0,0,0,0.3);
+}
+
+.cta-button {
+    margin-top: 20px;
+}
+
+.cta-button a {
+    display: inline-block;
+    background-color: #d4af37;
+    color: #2d064c;
+    padding: 12px 25px;
+    font-size: 1.1rem;
+    font-weight: bold;
+    text-decoration: none;
+    border-radius: 8px;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.4);
+    transition: all 0.3s ease;
+}
+
+.cta-button a:hover {
+    background-color: #fff;
+    color: #4a0082;
+    box-shadow: 0 6px 20px rgba(212, 175, 55, 0.5);
+    transform: translateY(-2px);
 }
 
 .footer {
@@ -279,19 +282,6 @@
   .content h2 { font-size: 1.2rem; }
   .content p { font-size: 0.8rem; }
 
-  .keywords {
-    gap: 8px;
-    /* flex-wrap: wrap;
-    overflow: auto; */
-  }
-  .keywords div {
-    padding: 5px 10px;
-    font-size: 0.7rem;
-    /* overflow: auto;
-    flex-wrap: wrap; */
-  }
-
-
   .speaker h2 { font-size: 1.2rem; }
   .speaker p { font-size: 0.8rem; }
 
@@ -302,9 +292,13 @@
 
   .event-details h2 { font-size: 1.2rem; }
   .event-details h3 { font-size: 1rem; }
+  .cta-button a { font-size: 1rem; padding: 10px 20px;}
+
 
   .footer img { width: 200px; height: 45px; }
   .footer p { font-size: 0.7rem; }
   .footer p:last-child { font-size: 0.6rem; }
 }
 </style>
+</body>
+</html>
