--- a/inquicon/inquicon_invitation.html
+++ b/inquicon/inquicon_invitation.html
@@ -222,8 +222,8 @@
 
             <!-- Poster section -->
             <div class="banner-images" style="padding: 20px; text-align: center; background-color: #000000;">
-                <img src="https://raw.githubusercontent.com/Shuvam-Banerji-Seal/Email-HTML/refs/heads/main/assets/1.svg" alt="Inquicon Poster 1" style="width: 45%; margin: 5px; border-radius: 8px; border: 1px solid #00f2ff;">
-                <img src="https://raw.githubusercontent.com/Shuvam-Banerji-Seal/Email-HTML/refs/heads/main/assets/2.svg" alt="Inquicon Poster 2" style="width: 45%; margin: 5px; border-radius: 8px; border: 1px solid #00f2ff;">
+                <img src="https://raw.githubusercontent.com/Shuvam-Banerji-Seal/Email-HTML/refs/heads/main/assets/1.webp" alt="Inquicon Poster 1" style="width: 45%; margin: 5px; border-radius: 8px; border: 1px solid #00f2ff;">
+                <img src="https://raw.githubusercontent.com/Shuvam-Banerji-Seal/Email-HTML/refs/heads/main/assets/2.webp" alt="Inquicon Poster 2" style="width: 45%; margin: 5px; border-radius: 8px; border: 1px solid #00f2ff;">
             </div>
 
             <!-- Main Content -->
