--- a/inquicon/inquicon_invitation.html
+++ b/inquicon/inquicon_invitation.html
@@ -214,7 +214,7 @@
                 <div class="collaboration-banner" style="display: inline-block; padding: 15px 25px; background-color: rgba(0, 0, 0, 0.4); border: 1px solid rgba(0, 242, 255, 0.3); border-radius: 12px; margin-bottom: 25px;">
                     <img src="https://raw.githubusercontent.com/Shuvam-Banerji-Seal/Email-HTML/refs/heads/main/assets/SlashDot%20Main%20logo%20noBG%20W-01-02.png" alt="Slashdot Logo" style="height: 40px; vertical-align: middle;">
                     <span class="logo-divider" style="color: #ffffff; font-size: 24px; margin: 0 15px; vertical-align: middle;">×</span>
-                    <span style="font-family: 'Syncopate', sans-serif; font-weight: bold; color: #ff00ff; font-size: 24px; vertical-align: middle;">INQUICON</span>
+                    <img src="https://raw.githubusercontent.com/Shuvam-Banerji-Seal/Email-HTML/refs/heads/main/assets/inquicon_logo.jpg" alt="Inquicon Logo" style="height: 40px; vertical-align: middle; border-radius: 5px;">
                 </div>
                 <h1 style="color: #00f2ff; font-family: 'Syncopate', sans-serif; font-size: 28px; margin: 10px 0; text-transform: uppercase; letter-spacing: 4px;">MISSION: CAPTCHA</h1>
                 <p style="color: #00f2ff; font-weight: bold; margin-top: 10px; letter-spacing: 3px; font-family: 'Syncopate', sans-serif; font-size: 12px;">ANIME • CODE • FUTURE</p>
@@ -275,9 +275,29 @@
             <!-- Footer -->
             <div class="footer" style="padding: 40px 30px; text-align: center; background-color: #000000; border-top: 1px solid rgba(0, 242, 255, 0.2);">
                 <img src="https://raw.githubusercontent.com/Shuvam-Banerji-Seal/Email-HTML/refs/heads/main/assets/SlashDot%20Main%20logo%20noBG%20W-01-02.png" alt="Slashdot Logo" style="height: 50px; margin-bottom: 20px;">
-                <p style="color: #888888; font-size: 13px; margin: 5px 0;"><strong>Slashdot Programming Club x Inquicon 2026</strong></p>
-                <p style="color: #888888; font-size: 13px; margin: 5px 0;">IISER Kolkata Campus</p>
-                <p style="color: #888888; font-size: 13px; margin: 5px 0;">© 2026 Slashdot x Inquicon. All rights reserved.</p>
+                
+                <div style="margin-bottom: 25px;">
+                    <a href="https://www.instagram.com/inquicon?igsh=NTc4MTIwNjQ2YQ==" style="color: #ff00ff; text-decoration: none; font-size: 14px; font-weight: bold; border: 1px solid #ff00ff; padding: 10px 20px; border-radius: 30px; display: inline-block;">
+                        Follow Inquicon on Instagram 📸
+                    </a>
+                </div>
+
+                <div style="color: #888888; font-size: 13px; margin-bottom: 30px; line-height: 1.6;">
+                    <p style="margin: 0; color: #ffffff;"><strong>Regards,</strong></p>
+                    <p style="margin: 5px 0; color: #00f2ff; font-size: 15px;"><strong>Team Slashdot</strong></p>
+                    <p style="margin: 5px 0;">Slashdot: The Coding and Designing Club</p>
+                    <p style="margin: 2px 0;">Indian Institute of Science Education and Research Kolkata</p>
+                    
+                    <div style="margin-top: 15px;">
+                        <p style="margin: 2px 0;">Shuvam Banerji Seal (<a href="mailto:sbs22ms076@iiserkol.ac.in" style="color: #ccd0d8; text-decoration: none;">sbs22ms076@iiserkol.ac.in</a>)</p>
+                        <p style="margin: 2px 0;">Anuprovo Debnath (<a href="mailto:ad23ms110@iiserkol.ac.in" style="color: #ccd0d8; text-decoration: none;">ad23ms110@iiserkol.ac.in</a>)</p>
+                        <p style="margin: 2px 0;">Abhinav Dhingra (<a href="mailto:ad24ms110@iiserkol.ac.in" style="color: #ccd0d8; text-decoration: none;">ad24ms110@iiserkol.ac.in</a>)</p>
+                    </div>
+                </div>
+
+                <p style="color: #888888; font-size: 12px; margin: 5px 0;"><strong>Slashdot Programming Club x Inquicon 2026</strong></p>
+                <p style="color: #888888; font-size: 12px; margin: 5px 0;">IISER Kolkata Campus</p>
+                <p style="color: #888888; font-size: 11px; margin: 5px 0; opacity: 0.7;">© 2026 Slashdot x Inquicon. All rights reserved.</p>
                 <div class="quote" style="border: none; background: none; font-size: 12px; opacity: 0.6; margin-top: 20px; color: #888888;">
                     "See you in the next episode!"
                 </div>
