--- a/inquicon/inquicon_invitation.html
+++ b/inquicon/inquicon_invitation.html
@@ -84,11 +84,12 @@
 
     .quote {
         font-style: italic;
-        color: #ff00ff;
+        color: #ffff00;
+        text-shadow: 0 0 10px rgba(255, 255, 0, 0.5);
         text-align: center;
         margin: 25px 0;
         padding: 15px;
-        border-left: 3px solid #00f2ff;
+        border-left: 3px solid #ffff00;
         background: rgba(255, 255, 255, 0.02);
     }
 
@@ -164,16 +165,17 @@
     .cta-button {
         display: inline-block;
         padding: 20px 45px;
-        background-color: #00f2ff;
-        background: linear-gradient(45deg, #00f2ff, #0066ff);
-        color: #ffffff;
+        background-color: transparent;
+        border: 2px solid #00f2ff;
+        color: #00f2ff;
         text-decoration: none;
         font-weight: bold;
         text-transform: uppercase;
         letter-spacing: 3px;
-        border-radius: 50px;
+        border-radius: 4px;
         font-family: 'Syncopate', sans-serif;
         font-size: 14px;
+        box-shadow: 6px 6px 0px #ff00ff;
     }
 
     .footer {
@@ -211,10 +213,10 @@
             
             <!-- Header section -->
             <div class="header" style="padding: 40px 20px; text-align: center; background-color: #000000; border-bottom: 2px solid #00f2ff;">
-                <div class="collaboration-banner" style="display: inline-block; padding: 15px 25px; background-color: rgba(0, 0, 0, 0.4); border: 1px solid rgba(0, 242, 255, 0.3); border-radius: 12px; margin-bottom: 25px;">
-                    <img src="https://raw.githubusercontent.com/Shuvam-Banerji-Seal/Email-HTML/refs/heads/main/assets/SlashDot%20Main%20logo%20noBG%20W-01-02.png" alt="Slashdot Logo" style="height: 40px; vertical-align: middle;">
-                    <span class="logo-divider" style="color: #ffffff; font-size: 24px; margin: 0 15px; vertical-align: middle;">×</span>
-                    <img src="https://raw.githubusercontent.com/Shuvam-Banerji-Seal/Email-HTML/refs/heads/main/assets/inquicon_logo.jpg" alt="Inquicon Logo" style="height: 40px; vertical-align: middle; border-radius: 5px;">
+                <div class="collaboration-banner" style="display: inline-block; padding: 20px 35px; background-color: rgba(0, 0, 0, 0.5); border: 2px solid #00f2ff; border-radius: 12px; margin-bottom: 25px;">
+                    <img src="https://raw.githubusercontent.com/Shuvam-Banerji-Seal/Email-HTML/refs/heads/main/assets/SlashDot%20Main%20logo%20noBG%20W-01-02.png" alt="Slashdot Logo" style="height: 70px; vertical-align: middle;">
+                    <span class="logo-divider" style="color: #ffffff; font-size: 32px; margin: 0 15px; vertical-align: middle;">×</span>
+                    <img src="https://raw.githubusercontent.com/Shuvam-Banerji-Seal/Email-HTML/refs/heads/main/assets/inquicon_logo.jpg" alt="Inquicon Logo" style="height: 70px; vertical-align: middle; border-radius: 5px;">
                 </div>
                 <h1 style="color: #00f2ff; font-family: 'Syncopate', sans-serif; font-size: 28px; margin: 10px 0; text-transform: uppercase; letter-spacing: 4px;">MISSION: CAPTCHA</h1>
                 <p style="color: #00f2ff; font-weight: bold; margin-top: 10px; letter-spacing: 3px; font-family: 'Syncopate', sans-serif; font-size: 12px;">ANIME • CODE • FUTURE</p>
@@ -228,12 +230,18 @@
 
             <!-- Main Content -->
             <div class="content" style="padding: 40px 30px;">
-                <div class="quote" style="font-style: italic; color: #ff00ff; text-align: center; margin: 25px 0; padding: 15px; border-left: 3px solid #00f2ff; background-color: rgba(255, 255, 255, 0.05);">
+                <div class="quote" style="font-style: italic; color: #ffff00; text-shadow: 0 0 10px rgba(255, 255, 0, 0.4); text-align: center; margin: 25px 0; padding: 15px; border-left: 3px solid #ffff00; background-color: rgba(255, 255, 255, 0.05);">
                     "When two passionate communities unite, the possibilities are endless!"
                 </div>
 
                 <p style="color: #ccd0d8; font-size: 16px; line-height: 1.8;">Konnichiwa, IISER Kolkata!</p>
                 <p style="color: #ccd0d8; font-size: 16px; line-height: 1.8;">The <strong>Slashdot Programming Club</strong> has joined forces with <strong>Inquicon</strong>—the premier Anime event of Inquivesta—to manifest a challenge that blurs the line between digital security and anime culture!</p>
+
+                <div style="text-align: center; margin: 30px 0;">
+                    <a href="https://www.instagram.com/inquicon?igsh=NTc4MTIwNjQ2YQ==" style="color: #ffff00; text-decoration: none; font-size: 14px; font-weight: bold; border: 2px solid #ffff00; padding: 12px 25px; border-radius: 4px; display: inline-block; text-transform: uppercase; letter-spacing: 2px; box-shadow: 4px 4px 0px #ff00ff; font-family: 'Syncopate', sans-serif;">
+                        What the heck is Inquicon? 🤔
+                    </a>
+                </div>
 
                 <div class="event-card" style="background-color: #1a1a2e; border: 1px solid rgba(0, 242, 255, 0.1); border-radius: 16px; padding: 25px; margin: 30px 0;">
                     <h2 style="color: #00f2ff; font-family: 'Syncopate', sans-serif; font-size: 18px; text-transform: uppercase;">👾 MISSION: ANIME CAPTCHA</h2>
@@ -259,12 +267,12 @@
                     <li class="feature-item" style="color: #ffffff; margin-bottom: 12px; padding-left: 25px; position: relative;"><strong>Winners Announced:</strong> February 7, 2026</li>
                 </ul>
 
-                <div class="quote" style="font-style: italic; color: #ff00ff; text-align: center; margin: 25px 0; padding: 15px; border-left: 3px solid #00f2ff; background-color: rgba(255, 255, 255, 0.05);">
+                <div class="quote" style="font-style: italic; color: #ffff00; text-shadow: 0 0 10px rgba(255, 255, 0, 0.4); text-align: center; margin: 25px 0; padding: 15px; border-left: 3px solid #ffff00; background-color: rgba(255, 255, 255, 0.05);">
                     "If you don't like your destiny, don't accept it. Instead, have the courage to change it the way you want it to be." — Naruto Uzumaki
                 </div>
 
                 <div class="cta-container" style="text-align: center; padding: 30px 0;">
-                    <a href="https://inquicon.github.io/events/captcha.html" class="cta-button" style="display: inline-block; padding: 20px 45px; background-color: #00f2ff; background: linear-gradient(45deg, #00f2ff, #0066ff); color: #ffffff; text-decoration: none; font-weight: bold; text-transform: uppercase; letter-spacing: 3px; border-radius: 50px; font-family: 'Syncopate', sans-serif; font-size: 14px;">Accept the Challenge</a>
+                    <a href="https://inquicon.github.io/events/captcha.html" class="cta-button" style="display: inline-block; padding: 20px 45px; background-color: transparent; border: 2px solid #00f2ff; color: #00f2ff; text-decoration: none; font-weight: bold; text-transform: uppercase; letter-spacing: 3px; border-radius: 4px; font-family: 'Syncopate', sans-serif; font-size: 14px; box-shadow: 8px 8px 0px #ff00ff;">Accept the Challenge</a>
                 </div>
 
                 <p style="color: #ccd0d8; font-size: 16px; line-height: 1.8;">Are you ready to transcend your limits? Show us your unique approach to combining anime culture with security challenges!</p>
@@ -274,14 +282,8 @@
 
             <!-- Footer -->
             <div class="footer" style="padding: 40px 30px; text-align: center; background-color: #000000; border-top: 1px solid rgba(0, 242, 255, 0.2);">
-                <img src="https://raw.githubusercontent.com/Shuvam-Banerji-Seal/Email-HTML/refs/heads/main/assets/SlashDot%20Main%20logo%20noBG%20W-01-02.png" alt="Slashdot Logo" style="height: 50px; margin-bottom: 20px;">
+                <img src="https://raw.githubusercontent.com/Shuvam-Banerji-Seal/Email-HTML/refs/heads/main/assets/SlashDot%20Main%20logo%20noBG%20W-01-02.png" alt="Slashdot Logo" style="height: 80px; margin-bottom: 25px;">
                 
-                <div style="margin-bottom: 25px;">
-                    <a href="https://www.instagram.com/inquicon?igsh=NTc4MTIwNjQ2YQ==" style="color: #ff00ff; text-decoration: none; font-size: 14px; font-weight: bold; border: 1px solid #ff00ff; padding: 10px 20px; border-radius: 30px; display: inline-block;">
-                        Follow Inquicon on Instagram 📸
-                    </a>
-                </div>
-
                 <div style="color: #888888; font-size: 13px; margin-bottom: 30px; line-height: 1.6;">
                     <p style="margin: 0; color: #ffffff;"><strong>Regards,</strong></p>
                     <p style="margin: 5px 0; color: #00f2ff; font-size: 15px;"><strong>Team Slashdot</strong></p>
@@ -298,7 +300,7 @@
                 <p style="color: #888888; font-size: 12px; margin: 5px 0;"><strong>Slashdot Programming Club x Inquicon 2026</strong></p>
                 <p style="color: #888888; font-size: 12px; margin: 5px 0;">IISER Kolkata Campus</p>
                 <p style="color: #888888; font-size: 11px; margin: 5px 0; opacity: 0.7;">© 2026 Slashdot x Inquicon. All rights reserved.</p>
-                <div class="quote" style="border: none; background: none; font-size: 12px; opacity: 0.6; margin-top: 20px; color: #888888;">
+                <div class="quote" style="border: none; background: none; font-size: 14px; color: #ffff00; text-shadow: 0 0 8px rgba(255, 255, 0, 0.5); opacity: 0.9; margin-top: 20px;">
                     "See you in the next episode!"
                 </div>
             </div>
