Add micro-text hints to buttons

--- a/inquicon/inquicon_invitation.html
+++ b/inquicon/inquicon_invitation.html
@@ -239,7 +239,8 @@
 
                 <div style="text-align: center; margin: 30px 0;">
                     <a href="https://www.instagram.com/inquicon?igsh=NTc4MTIwNjQ2YQ==" style="color: #ffff00; text-decoration: none; font-size: 14px; font-weight: bold; border: 2px solid #ffff00; padding: 12px 25px; border-radius: 4px; display: inline-block; text-transform: uppercase; letter-spacing: 2px; box-shadow: 4px 4px 0px #ff00ff; font-family: 'Syncopate', sans-serif;">
-                        What the heck is Inquicon? 🤔
+                        What the heck is Inquicon? 🤔<br>
+                        <span style="font-size: 8px; opacity: 0.8; text-transform: none; letter-spacing: 1px; display: block; margin-top: 5px;">Click here to find out more</span>
                     </a>
                 </div>
 
@@ -272,7 +273,10 @@
                 </div>
 
                 <div class="cta-container" style="text-align: center; padding: 30px 0;">
-                    <a href="https://inquicon.github.io/events/captcha.html" class="cta-button" style="display: inline-block; padding: 20px 45px; background-color: transparent; border: 2px solid #00f2ff; color: #00f2ff; text-decoration: none; font-weight: bold; text-transform: uppercase; letter-spacing: 3px; border-radius: 4px; font-family: 'Syncopate', sans-serif; font-size: 14px; box-shadow: 8px 8px 0px #ff00ff;">Accept the Challenge</a>
+                    <a href="https://inquicon.github.io/events/captcha.html" class="cta-button" style="display: inline-block; padding: 20px 45px; background-color: transparent; border: 2px solid #00f2ff; color: #00f2ff; text-decoration: none; font-weight: bold; text-transform: uppercase; letter-spacing: 3px; border-radius: 4px; font-family: 'Syncopate', sans-serif; font-size: 14px; box-shadow: 8px 8px 0px #ff00ff;">
+                        Accept the Challenge<br>
+                        <span style="font-size: 8px; opacity: 0.8; text-transform: none; letter-spacing: 1px; display: block; margin-top: 8px;">Click here to find out more</span>
+                    </a>
                 </div>
 
                 <p style="color: #ccd0d8; font-size: 16px; line-height: 1.8;">Are you ready to transcend your limits? Show us your unique approach to combining anime culture with security challenges!</p>
