Update poster layout: enlarge main poster and relocate second poster before timeline

--- a/inquicon/inquicon_invitation.html
+++ b/inquicon/inquicon_invitation.html
@@ -72,10 +72,11 @@
     }
 
     .banner-images img {
-        width: 46%;
-        margin: 5px;
+        width: 95%;
+        max-width: 600px;
+        margin: 10px 0;
         border-radius: 12px;
-        border: 2px solid rgba(0, 242, 255, 0.3);
+        border: 2px solid rgba(0, 242, 255, 0.5);
     }
 
     .content {
@@ -224,8 +225,7 @@
 
             <!-- Poster section -->
             <div class="banner-images" style="padding: 20px; text-align: center; background-color: #000000;">
-                <img src="https://raw.githubusercontent.com/Shuvam-Banerji-Seal/Email-HTML/refs/heads/main/assets/1.webp" alt="Inquicon Poster 1" style="width: 45%; margin: 5px; border-radius: 8px; border: 1px solid #00f2ff;">
-                <img src="https://raw.githubusercontent.com/Shuvam-Banerji-Seal/Email-HTML/refs/heads/main/assets/2.webp" alt="Inquicon Poster 2" style="width: 45%; margin: 5px; border-radius: 8px; border: 1px solid #00f2ff;">
+                <img src="https://raw.githubusercontent.com/Shuvam-Banerji-Seal/Email-HTML/refs/heads/main/assets/1.webp" alt="Inquicon Poster 1" style="width: 95%; max-width: 600px; margin: 10px 0; border-radius: 12px; border: 2px solid #00f2ff;">
             </div>
 
             <!-- Main Content -->
@@ -260,6 +260,10 @@
                         <div class="prize-amount" style="color: #ffff00; font-size: 36px; font-weight: bold;">₹1,500</div>
                         <p style="margin: 5px 0 0 0; font-size: 12px; color: #ffffff;">(₹500 for each of the Top 3 Elite Developers)</p>
                     </div>
+                </div>
+
+                <div style="text-align: center; margin: 40px 0;">
+                    <img src="https://raw.githubusercontent.com/Shuvam-Banerji-Seal/Email-HTML/refs/heads/main/assets/2.webp" alt="Inquicon Poster 2" style="width: 95%; max-width: 600px; border-radius: 12px; border: 2px solid #00f2ff;">
                 </div>
 
                 <h2 style="color: #00f2ff; font-family: 'Syncopate', sans-serif; font-size: 18px; text-transform: uppercase;">📅 TIMELINE</h2>
