Update SlashTalk with /.AI_Talks branding, formal intro, and footer logo

--- a/student_talk_series/main_email/slashtalk_ml_ai.html
+++ b/student_talk_series/main_email/slashtalk_ml_ai.html
@@ -220,7 +220,7 @@
             <!-- Header -->
             <div class="header">
                 <img src="https://raw.githubusercontent.com/Shuvam-Banerji-Seal/Email-HTML/refs/heads/main/assets/SlashDot%20Main%20logo%20noBG%20W-01-02.png" alt="Slashdot Logo" style="height: 50px; margin-bottom: 25px;">
-                <h1>SLASHTALK.AI</h1>
+                <h1>/.AI_Talks</h1>
                 <p>/* The Beginner's Guide to Machine General Intelligence */</p>
                 
                 <div class="svg-header-container">
@@ -292,8 +292,8 @@
 
             <!-- Content -->
             <div class="content">
-                <p class="main-text">Konnichiwa, IISER Kolkata! 🧠</p>
-                <p class="main-text">We've spent months using tools built by others. Now, it's time to understand how they actually work. Join us for a deep dive into the <strong>Mathematical Soul of AI</strong>—where you stop being a user and start being a creator.</p>
+                <p class="main-text">Greetings, IISER Kolkata.</p>
+                <p class="main-text">While the accessibility of modern AI tools has grown rapidly, understanding their underlying architecture remains paramount. We invite you to a comprehensive study of the <strong>Mathematical Foundations of Machine Intelligence</strong>. This workshop is designed to transition participants from passive users to informed architects of AI systems.</p>
 
                 <div class="event-card">
                     <div class="curriculum-block">
@@ -343,6 +343,7 @@
             <!-- Footer -->
             <div class="footer">
                 <div class="footer-content">
+                    <img src="https://raw.githubusercontent.com/Shuvam-Banerji-Seal/Email-HTML/refs/heads/main/assets/SlashDot%20Main%20logo%20noBG%20W-01-02.png" alt="Slashdot Logo" style="height: 35px; opacity: 0.8; margin-bottom: 25px;">
                     <p style="margin-bottom: 25px;">
                         <span class="footer-accent">Regards,</span><br>
                         <span style="color: #f8fafc; font-weight: 700; font-size: 18px; letter-spacing: -0.5px;">Team Slashdot</span><br>
