Update email template to use WebP image instead of SVG for better compatibility

--- a/student_talk_series/main_email/slashtalk_ml_ai.html
+++ b/student_talk_series/main_email/slashtalk_ml_ai.html
@@ -230,7 +230,7 @@
                 <p>The Beginner's Guide to Machine General Intelligence </p>
                 
                 <div class="svg-header-container">
-                    <img src="https://raw.githubusercontent.com/Shuvam-Banerji-Seal/Email-HTML/main/student_talk_series/main_email/neural_network.svg" alt="Neural Network Architecture" style="width: 100%; max-width: 400px; height: auto; display: block; margin: 0 auto;">
+                    <img src="https://raw.githubusercontent.com/Shuvam-Banerji-Seal/Email-HTML/main/student_talk_series/main_email/neural_network.webp" alt="Neural Network Architecture" style="width: 100%; max-width: 400px; height: auto; display: block; margin: 0 auto;">
                 </div>
             </div>
 
